# ninja-tools

./: CMakeLists.txt
data/: ninja_log_mlib  ninja_log_opencv
include/: node.h  parse.h  project_types.h  record.h  svg.h  table.h
parser/include/: parse.h
parser/src/: parse.c
src/: main.c  node.c  parse.c  record.c  svg.c  table.c
stat/: main.c
table/include/: node.h
table/src/: node.c  table.c
tests/: test_parser.cpp
viz/: block.h  config.c  config.h  main.c
